configured connection objects through docker compose

--- a/airflow_2.9/docker-compose.yaml
+++ b/airflow_2.9/docker-compose.yaml
@@ -11,6 +11,8 @@ x-airflow-common: &airflow-common
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__LOGGING__LOGGING_LEVEL: INFO
     _PIP_ADDITIONAL_REQUIREMENTS: apache-airflow-providers-sftp
+    AIRFLOW_CONN_POSTGRES_DB: postgresql://airflow:airflow@postgres-db:5432/my_db_1
+    AIRFLOW_CONN_SFTP_DEFAULT: sftp://ubuntu:ubuntu@sftp-server:22
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
